--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -11,6 +11,82 @@
   publisher={Future Medicine}
 }
 
+@inproceedings{mikolov2013distributed,
+  title={Distributed representations of words and phrases and their compositionality},
+  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+  booktitle={Advances in neural information processing systems},
+  pages={3111--3119},
+  year={2013}
+}
+
+@article{booth1955machine,
+  title={Machine translation of languages, fourteen essays},
+  author={Booth, Andrew Donald},
+  year={1955},
+  publisher={Wiley}
+}
+
+@phdthesis{perinet2015,
+  TITLE = {{Distributional analysis applied to specialized corpora: reduction of data sparsity through context abstraction}},
+  AUTHOR = {P{\'e}rinet, Amandine},
+  SCHOOL = {{Universit{\'e} Paris 13 ; Laboratoire d'Informatique M{\'e}dicale et d'Ing{\'e}nieurie des Connaissances en e-Sant{\'e}}},
+  YEAR = {2015},
+  MONTH = Mar,
+  TYPE = {Theses},
+  HAL_ID = {tel-01202371},
+  HAL_VERSION = {v1},
+}
+
+
+@article{turney2010,
+  author    = {Peter D. Turney and
+               Patrick Pantel},
+  title     = {From Frequency to Meaning: Vector Space Models of Semantics},
+  journal   = {CoRR},
+  volume    = {abs/1003.1141},
+  year      = {2010}
+}
+@article{sahlgren2008distributional,
+  title={The distributional hypothesis},
+  author={Sahlgren, Magnus},
+  journal={Italian Journal of Disability Studies},
+  volume={20},
+  pages={33--53},
+  year={2008}
+}
+ 
+@InCollection{verschueren2015handbook,
+  title={Handbook of Pragmatics 2015},
+  author={Tomas Lehecka},
+  editor={{\"O}stman, Jan and Blommaert and Verschueren, Jef},
+  year={2015},
+  publisher={John Benjamins},
+  chapter = {2},
+}
+
+@phdthesis{sahlgren2006word,
+  title={The Word-Space Model: Using distributional analysis to represent syntagmatic and paradigmatic relations between words in high-dimensional vector spaces},
+  author={Sahlgren, Magnus},
+  year={2006}
+}
+
+
+@Misc{piero2017,
+  author =       {Molino, Piero},
+  title =        {{Word Embeddings Past, Present and Future}},
+  year =         {2017},
+  month =        {06},
+  note =         {AI With The Best AIWTB 2017},
+  url ={http://w4nderlu.st/teaching/word-embeddings},
+}
+
+ 
+@article{de1916course,
+  title={Course in general linguistics (trans. Roy Harris)},
+  author={De Saussure, Ferdinand},
+  journal={London: Duckworth},
+  year={1916}
+}
 
 @article{nadeau2007survey,
   title={A survey of named entity recognition and classification},
@@ -23,16 +99,39 @@
   publisher={John Benjamins publishing company}
 }
 
-@article{garten2010recent,
-  title={Recent progress in automatically extracting information from the pharmacogenomic literature},
-  author={Garten, Yael and Coulet, Adrien and Altman, Russ B},
-  journal={Pharmacogenomics},
-  volume={11},
-  number={10},
-  pages={1467--1489},
-  year={2010},
-  publisher={Future Medicine}
+@book{nida1979componential,
+  title={A Componential Analysis of Meaning: An Introduction to Semantic Structures},
+  author={Nida, Eugene A},
+  volume={57},
+  year={1979},
+  publisher={Walter de Gruyter GmbH \& Co KG}
 }
+
+@inproceedings{schutze1993vector,
+  title={A vector model for syntagmatic and paradigmatic relatedness},
+  author={Sch{\"u}tze, Hinrich and Pedersen, Jan},
+  booktitle={Proceedings of the 9th Annual Conference of the UW Centre for the New OED and Text Research},
+  pages={104--113},
+  year={1993},
+  organization={Oxford}
+}
+
+
+@article{fabre2015,
+  TITLE = {{Distributional Semantics Today Introduction to the special issue}},
+  AUTHOR = {Fabre, C{\'e}cile and Lenci, Alessandro},
+  URL = {https://hal.archives-ouvertes.fr/hal-01259695},
+  JOURNAL = {{Traitement Automatique des Langues}},
+  PUBLISHER = {{Lavoisier (Hermes Science Publications)}},
+  SERIES = {S{\'e}mantique distributionnelle},
+  VOLUME = {56},
+  NUMBER = {2},
+  PAGES = {7-20},
+  YEAR = {2015},
+  HAL_ID = {hal-01259695},
+  HAL_VERSION = {v1},
+}
+
 
 
 @book{JurafskyM09,
@@ -108,6 +207,18 @@
         note={\url{http://is.muni.cz/publication/884893/en}},
         language={English}
 }
+
+@article{baroni2010distributional,
+  title={Distributional memory: A general framework for corpus-based semantics},
+  author={Baroni, Marco and Lenci, Alessandro},
+  journal={Computational Linguistics},
+  volume={36},
+  number={4},
+  pages={673--721},
+  year={2010},
+  publisher={MIT Press}
+}
+
 
 @book{Sugiyama2015,
  author = {Sugiyama, Masashi},
@@ -852,6 +963,22 @@ publisher = "Wiley-Blackwell",
   note      = {Cambridge Books Online},
   year     = {2011},
 }
+
+@techreport{lebret2013deep,
+  title={Is deep learning really necessary for word embeddings?},
+  author={Lebret, R{\'e}mi and Legrand, Jo{\"e}l and Collobert, Ronan},
+  year={2013},
+  institution={Idiap}
+}
+
+@inproceedings{levy2014neural,
+  title={Neural word embedding as implicit matrix factorization},
+  author={Levy, Omer and Goldberg, Yoav},
+  booktitle={Advances in neural information processing systems},
+  pages={2177--2185},
+  year={2014}
+}
+
 
 @InProceedings{LevyG14,
   author    = {Omer Levy and Yoav Goldberg},
