--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -17,7 +17,7 @@
 \noindent \large {Defended by\\}
 \noindent \LARGE Edmundo-Pavel \textsc{Soriano-Morales} \\
 \vspace*{0.8cm}
-\noindent {\Huge \textbf{Design and Use of Aatomical Atlases for Radiotherapy}} \\
+\noindent {\Huge \textbf{Hypergraph Linguistic Model: WTF}} \\
 \vspace*{0.8cm}
 \noindent \Large Thesis Advisor: Sabine \textsc{Loudcher} and Julien \textsc{Ah-Pine} \\
 
